@@ -1,16 +1,16 @@
 Package: ABCoptim
 Type: Package
 Title: Implementation of Artificial Bee Colony (ABC) Optimization
-Version: 0.15.0
+Version: 0.15.9999
 Date: 2017-11-05
 Authors@R: c(
   person("George", "Vega Yon", email="g.vegayon@gmail.com", role=c("aut", "cre")),
-  person("Enyelbert", "Muñoz", email="enyeldoc2011@gmail.com", role=c("ctb")))
+  person("Enyelbert", "Muñoz", email="enyeldoc2011@gmail.com", role=c("ctb"))
+  )
 Description: An implementation of Karaboga (2005) Artificial Bee Colony
     Optimization algorithm <http://mf.erciyes.edu.tr/abc/pub/tr06_2005.pdf>.
-    This (working) version is a Work-in-progress, which is
-    why it has been implemented using pure R code. This was developed upon the basic
-    version programmed in C and distributed at the algorithm's official website.
+    This was developed upon the basic version programmed in C and distributed
+    at the algorithm's official website.
 Classification/ACM: G.1.6
 Classification/JEL: C61
 Encoding: UTF-8
@@ -23,6 +23,6 @@ Imports:
     graphics,
     stats,
     utils
-RoxygenNote: 6.0.1
+RoxygenNote: 6.0.1.9000
 Suggests: testthat,
     covr
