@@ -1,3 +1,7 @@
+2017-11-11  George G. Vega Yon (g.vegayon@gmail.com)
+	* Working on documentation.
+
+
 2017-11-05  George G. Vega Yon (g.vegayon@gmail.com)
 	* Preparing CRAN release.
 
